--- a/www/index.html
+++ b/www/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name = "format-detection" content = "telephone=no">
-  
+  <meta name="format-detection" content="telephone=no">
+  <script src="./antm-viewport.js"></script>
   <title>Super App</title>
   <link rel="stylesheet" href="index.css" />
 
